--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "temp-next-app",
+  "name": "ecommerce-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "convert-to-ts": "node scripts/convert-to-ts.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -24,8 +26,12 @@
     "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.26.9",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "babel-loader": "^10.0.0",
     "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5.3.3"
   }
 }
